--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -9,6 +9,7 @@
   --sb-green: #1a7f5a;
   --sb-green-hover: #156b4c;
   --sb-green2: #1a7f5a;
+  --sb-brand-blue: #414556;
 
   /* Subtle, refined visual properties */
   --sb-radius: 12px;
